feat: change colors

--- a/src/app/views/view-cats/view-cats.page.html
+++ b/src/app/views/view-cats/view-cats.page.html
@@ -1,12 +1,12 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar mode="ios">
+  <ion-toolbar color="primary" mode="ios">
     <ion-title>Catbreeds</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="dark">
 
-  <ion-card mode="ios" *ngFor="let k of vmCats.cats">
+  <ion-card color="medium" mode="ios" *ngFor="let k of vmCats.cats">
 
     <ion-card-header>
       <ion-card-title>
